--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@
     .menu-list {
        @apply cursor-pointer hover:text-purple-500 transition-all duration-200
     }
+    .btn {
+        @apply focus:ring focus:ring-white text-20 px-6 py-[6px] mt-[27px] bg-purple-500 rounded-[14px] font-bold hover:bg-pink-500 transition-all duration-300
+    }
 }
