--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,7 @@
     .btn {
         @apply focus:ring focus:ring-white text-20 px-6 py-[6px] mt-[27px] bg-purple-500 rounded-[14px] font-bold hover:bg-pink-500 transition-all duration-300
     }
+    .instruct-list {
+        @apply flex hover:pl-4 hover:text-purple-900 pl-2 rounded-2xl py-2 items-center gap-2 hover:bg-purple-300 hover:shadow-md transition-all duration-300
+    }
 }
